# lab_sqs

./: .env.example  .gitignore  AURA_CLI_DEMO_SUMMARY.md  AURA_SETUP.md  CAPABILITIES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MESSAGE_ORDERING.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  pyproject.toml  setup_queue.py  test_consumer.py
lab5_mlflow/: .env.example  GEPA_INTEGRATION.md  GEPA_README.md  HOMEWORK.md  README.md  __init__.py  aura_graphql.py  aura_import.py  config.example.yaml  gepa.py  gepa_feedback.py  gepa_optimizer.py  gepa_runner.py  pyproject.toml  requirements.txt  test_smoke.py
lab5_mlflow/app/: client_factory.py  router_factory.py  server.py
lab5_mlflow/dags/: aura_import_job.py  gepa_text2cypher_eval.py  load_iris_to_snowflake.py  train_model.py
lab5_mlflow/docs/: ADVANCED_PATTERNS.md  ENV_SETUP.md
lab5_mlflow/examples/: toast_training.json  toast_validation.json
lab5_mlflow/k8s/: fastapi-deployment.yaml  fastapi-service.yaml  mlflow-deployment.yaml  mlflow-service.yaml
lab5_mlflow/scripts/: airflow_scheduler.sh  airflow_webserver.sh  fast_api.sh  mlflow_ui.sh
lab5_mlflow/src/: ingest_pipeline.py  neo4j_connector.py  neo4j_mlops_connector.py  snowflake_connector.py  train.py
lab5_mlflow/templates/: ingestion_manifest.yaml
lab5_mlflow/tests/: conftest.py  test_aura_import.py  test_responses_adapter.py
schemas/: multi_tenant_restaurant_schema.graphql
scripts/: check_import_status.py  deploy_graphql_api.py  get_aura_ids.py  historical_import.py  investigate_aura_data.py  orchestrate_hybrid_import.py  (+4 more)
(+13 files in other folders)
